0026500: Add the possibility to save only part of shapes from XCAF document in IGES/STEP writers

Added public methods for specified labels (shapes) transfer in IGES/STEP writers.